Removing an inappropriate class used to wrap inline radio form controls. And switch inline margin from left to right side to allow for alignment left. Fixes https://github.com/openshift/origin-web-console/issues/1240 Fixes https://github.com/openshift/origin-web-console/issues/1234

--- a/app/styles/_forms.less
+++ b/app/styles/_forms.less
@@ -86,3 +86,12 @@
   // the sections just above.
   margin-top: @line-height-computed;
 }
+
+// Switch default bootstrap margin from left to the right side to enable left alignment of inputs at mobile
+.radio-inline,
+.radio-inline + .radio-inline,
+.checkbox-inline,
+.checkbox-inline + .checkbox-inline {
+  margin-left: 0;
+  margin-right: 10px;
+}
